# pmp-workflow

./: .env.example  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: ab_testing_framework.yaml  ai_content_generation.yaml  approval_chain.yaml  cloud_automation_aws.yaml  complex_workflow.yaml  conditional_workflow.yaml  content_publishing_pipeline.yaml  customer_onboarding.yaml  data_pipeline_etl.yaml  data_pipeline_with_error_handling.yaml  data_transformation_pipeline.yaml  ecommerce_order_processing.yaml  http_workflow.yaml  incident_response_automation.yaml  lead_nurturing_campaign.yaml  manual_trigger_workflow.yaml  monitoring_observability.yaml  parallel_workflow.yaml  schedule_trigger_workflow.yaml  secret_management_rotation.yaml  simple_workflow.yaml  testing_validation_workflow.yaml  webhook_trigger_workflow.yaml
migrations/: 001_create_workflows.sql  002_create_executions.sql  003_add_execution_tracking.sql  004_create_credentials.sql  005_create_credential_types.sql  006_migrate_credentials_to_types.sql
src/: lib.rs  main.rs
src/config/: loader.rs
src/db/: executions.rs  mod.rs  pool.rs  workflows.rs
src/execution/: engine.rs  executor.rs  mod.rs
src/models/: audit.rs  credential_type.rs  credentials.rs  execution.rs  mod.rs  node.rs  rbac.rs  workflow.rs
src/nodes/: anthropic.rs  assertion.rs  audit_trail.rs  aws_cloudwatch.rs  aws_dynamodb.rs  aws_lambda.rs  aws_messaging.rs  aws_s3.rs  aws_secrets_manager.rs  azure_key_vault.rs  bedrock.rs  circuit_breaker.rs  cohere.rs  conditional.rs  csv_excel.rs  database_query.rs  datadog.rs  (+68 more)
(+5 files in other folders)
